Fixed oversight that caused mp.show_mobile-courage_larger_screen to display on tablet, laptop, & desktop screens.

--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ a:active {
 }
 
 p.show_mobile-encourage_larger_screen {
-  display: flex;
+  display: none;
   justify-content: space-between;
   width: 100%;
   border-top: 5px double black;
@@ -90,6 +90,10 @@ p.show_mobile-encourage_larger_screen span {
 
   .show_desktop {
     display: none;
+  }
+
+  p.show_mobile-encourage_larger_screen {
+    display: flex;
   }
 }
 
